# vex

./: .gitattributes  .gitignore  Cargo.toml  DOCS.md  LICENSE  README.md  deny.toml  instructions.md  rust-toolchain.toml
.github/workflows/: ci.yml  deploy-vex-serve.yml  release.yml
crates/vex-api/: Cargo.toml
crates/vex-api/src/: lib.rs
crates/vex-cli/: Cargo.toml
crates/vex-cli/src/: main.rs  remote.rs  transport.rs
crates/vex-cli/tests/: e2e.rs  elements.rs  phase2.rs  phase3.rs  phase4.rs  phase5_merge.rs  phase6_compare.rs  remote_e2e.rs  spatial.rs  storey_checkout.rs
crates/vex-cli/tests/fixtures/: spatial-hierarchy.min.ifc  spatial-malformed.min.ifc  storey-geometry.min.ifc  visual_diff.golden.json
crates/vex-core/: Cargo.toml
crates/vex-core/src/: lib.rs  repo.rs  signing.rs
crates/vex-core/tests/: fidelity.rs
crates/vex-core/tests/common/: mod.rs
crates/vex-diff/: Cargo.toml
crates/vex-diff/src/: lib.rs  merge.rs
crates/vex-geometry/: Cargo.toml
crates/vex-geometry/src/: lib.rs
crates/vex-graph/: Cargo.toml
crates/vex-graph/src/: builder.rs  canonical.rs  geometry.rs  ir.rs  lib.rs  merkle.rs
crates/vex-ifc-parser/: Cargo.toml
crates/vex-ifc-parser/src/: guid.rs  header.rs  intake.rs  lexer.rs  lib.rs  limits.rs  parser.rs
crates/vex-protocol/: Cargo.toml
crates/vex-protocol/src/: lib.rs
crates/vex-serve/: Cargo.toml
crates/vex-serve/src/: architur.rs  lib.rs  main.rs
crates/vex-serve/tests/: protocol_e2e.rs
crates/vex-storage/: Cargo.toml
crates/vex-storage/src/: backend.rs  lib.rs  object.rs  postgres_backend.rs  redb_backend.rs  s3_backend.rs  store.rs
crates/vex-summary/: Cargo.toml
crates/vex-summary/src/: lib.rs
crates/vex-utils/: Cargo.toml
crates/vex-utils/src/: error.rs  hash.rs  interner.rs  lib.rs  profile.rs  tolerance.rs
crates/vex-visual-diff/: Cargo.toml
crates/vex-visual-diff/src/: lib.rs
docker/vex-serve/: Dockerfile  README.md  authorized-keys-command.sh  entrypoint.sh  sshd_vexatlas.conf  vex-serve-session.sh
examples/: README.md  tiny-merge-theirs.min.ifc  tiny-v2.min.ifc  tiny.min.ifc
tools/: build-vex.sh  fetch-fixtures.sh  gen_spatial_fixtures.js  smoke-semantics.sh
