[package]
name = "vex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
description = "The `vex` command-line binary."

[[bin]]
name = "vex"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
vex-core         = { workspace = true }
vex-diff         = { workspace = true }
vex-utils        = { workspace = true }
vex-api          = { workspace = true }
vex-protocol     = { workspace = true }
vex-storage      = { workspace = true }
anyhow            = { workspace = true }
bincode           = { workspace = true }
clap              = { workspace = true }
hex               = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
time              = { workspace = true }
toml              = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json       = { workspace = true }
vex-core        = { workspace = true }
vex-graph       = { workspace = true }
vex-ifc-parser  = { workspace = true }
vex-diff        = { workspace = true }
vex-utils       = { workspace = true }
vex-storage     = { workspace = true }
tempfile        = "3"
