[package]
name = "vex-serve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Server-side daemon for vex remote operations (clone/fetch/push)."

[lints]
workspace = true

[lib]
name = "vex_serve"
path = "src/lib.rs"

[[bin]]
name = "vex-serve"
path = "src/main.rs"

[dependencies]
vex-utils    = { workspace = true }
vex-storage  = { workspace = true }
vex-core     = { workspace = true }
vex-protocol = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
hmac         = "0.12"
ureq         = { version = "2.10", default-features = false, features = ["tls", "json"] }
time         = { workspace = true }

[dev-dependencies]
tempfile = "3"
bincode  = { workspace = true }
